<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/mqtt_settings" />
        <item
            android:id="@+id/nav_pote"
            android:icon="@drawable/ic_pote"
            android:title="@string/pote" />
        <item
            android:id="@+id/nav_temp"
            android:icon="@drawable/ic_temp"
            android:title="@string/temp" />

        <item
            android:id="@+id/nav_hall"
            android:icon="@drawable/ic_hall"
            android:title="@string/hall" />
        <item
            android:id="@+id/nav_acc"
            android:icon="@drawable/ic_acc"
            android:title="@string/acceleration" />
        <item
            android:id="@+id/nav_bright"
            android:icon="@drawable/ic_bright"
            android:title="@string/brightness" />
        <item
            android:id="@+id/nav_button"
            android:icon="@drawable/ic_button"
            android:title="@string/buttons" />

    </group>


</menu>