<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dataReceivedSw1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="407dp"
        android:text="@string/Sw1_data" />

    <TextView
        android:id="@+id/dataReceivedSw3"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="177dp"
        android:layout_marginBottom="301dp"
        android:text="@string/Sw3_data" />

    <TextView
        android:id="@+id/titleSw"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="80dp"
        android:text="@string/titleSw"
        android:textSize="30sp" />
</RelativeLayout>